Сервисы mock-брокера собираются фабрикой и получают зависимости явно
- MockBroker собирал все шесть сервисов сам через new, а сервисы в ответ
держали ссылку на брокер и читали его protected-поля - циклическая
зависимость, из-за которой ни один сервис нельзя было построить или
подменить отдельно от брокера.

- Зависимости переданы явно через конструкторы: MockUserService получает
Clock, MockInstrumentService - brokerId и репозиторий, MockSandboxService -
user- и operations-сервисы, MockOrderService и MockOperationsService -
конкретных соседей вместо брокера целиком. Ссылок на MockBroker в сервисах
не осталось.

- Добавлен пакет factory по образцу broker/impl/tinkoff: MockServiceContext
(общие входные данные), MockServices (набор готовых сервисов) и
MockServicesFactory (composition root, строит сервисы в порядке
зависимостей). MockBroker теперь только хранит полученное и отдаёт через
геттеры, а фабрику принимает параметром - её можно настроить снаружи, как
TinkoffServicesFactory. Фабрики объявлены интерфейсами: MockServiceFactory<T>
для сервисов, которым хватает контекста, и OperationsServiceFactory,
SandboxServiceFactory, OrderServiceFactory для тех, кому нужны уже собранные
соседи; реализации по умолчанию - Default*.

- EventMockBroker больше не собирает order-сервис в обход фабрики: он
подставляет EventOrderServiceFactory в тот же composition root. Исчезло
дублирующее поле orderService, затенявшее унаследованное, и лишний
MockOrderService, который строился и тут же выбрасывался. Приведение типа в
getOrderService() безопасно: EventOrderServiceFactory.create объявлен с
ковариантным возвратом EventSimulatedOrderService, а конструктор принимает
только эту фабрику.

Заодно в EventSimulatedOrderService убрано второе поле часов: applyClock
пишет в унаследованный clock, и tick() больше не может разойтись по времени
с остальными методами.